CI images update

--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-12 13:19:21
+lastsearch = 2024-07-12 13:48:22
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 57.7%%
-title = Bộ chăn ga gối SH_UC22 018
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC23 035
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
 
 [changagoidemsonghong.com]
 match = 38.7%%
