--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-12 09:05:04
+lastsearch = 2024-07-12 13:47:28
 
 [burningman.org]
 match = 0.0%%
@@ -690,4 +690,9 @@ url = https://support.apple.com/en-us/102655
 match = 0.0%%
 title = 
 url = https://www.federalregister.gov/agencies/national-institutes-of-health
+
+[www.patagonia.com]
+match = -66.7%%
+title = Patagonia Outdoor Clothing & Gear
+url = https://www.patagonia.com/home/
 
