--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-12 13:21:57
+lastsearch = 2024-07-12 13:47:50
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -366.7%%
-title = Book Tickets for Experiences and Activities Worldwide | TUI ...
-url = https://www.tuimusement.com/us/
+match = -316.7%%
+title = Khao Sok River Rafting with Elephant Sanctuary and Lunch
+url = https://www.tuimusement.com/uk/thailand/krabi/khao-sok-river-rafting-with-elephant-sanctuary-and-lunch/e_w427n-d_2567-c_171/
 
 [www.dixondirectional.com]
 match = -166.7%%
@@ -315,4 +315,9 @@ url = https://shopee.vn/TÚI-RÚT-TỔNG-HƠP-KOREA-i.53569870.7886364952
 match = 41.7%%
 title = Tui earrings
 url = https://juliahuyserdesign.com/en-dz/collections/all/products/tui-earrings
+
+[travelweekly.co.uk]
+match = -316.7%%
+title = Contiki unveils new itineraries and sale on selected trips
+url = https://travelweekly.co.uk/news/tour-operators/contiki-unveils-new-itineraries-and-sale-on-selected-trips
 
