--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-12 12:19:50
+lastsearch = 2024-07-12 13:45:04
 
 [ninhouse.vn]
 match = -161.5%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -176.9%%
-title = vỏ gối màu đen giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối màu đen&urlold=3pcs-tam-boc-vua-van-voi-bo-vo-goi-mau-den-in-hinh-la-duy-nhat-co-queen-boc-bao-ve-nem-ga-boc-nem-c/1529613635908289487/3502170206813664485/ 
+match = -153.8%%
+title = vỏ gối ngủ giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối ngủ&urlold=vo-goi-ngu-cotton-sateen-mot-mau-1-cap-studio-77-blss159-sage/4841357337532019556/2603260331390754704/ 
 
 [songhong.info]
 match = -161.5%%
