--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-12 10:14:46
+lastsearch = 2024-07-12 13:51:56
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = -21.4%%
-title = [ Ảnh thật 100%%] Chiếu trúc Quế Lâm loại 1 cao cấp 2 mắt ...
-url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-cấp-2-mắt-ngọc-i.19058947.7184515371
+match = 42.9%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [demxanh.com]
 match = -25.0%%
@@ -75,4 +75,9 @@ url = https://muathongminh.vn/chieu-truc-que-lam-hang-chuan-loai-1-p.1__97007562
 match = -96.4%%
 title = Kinh moi tham du: Hoi cho thuong mai va hop ... - Mailing List Archive
 url = https://lists.archive.carbon60.com/netapp/toasters/1036?page=last
+
+[sieuthinguyenkim.com]
+match = -10.7%%
+title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
+url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
