--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-12 11:39:42
+lastsearch = 2024-07-12 13:50:21
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
-match = -28.0%%
-title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn bung 16m có đáy
+match = -36.0%%
+title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
+url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
 
 [shopee.vn]
 match = -36.0%%
