CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-12 13:19:12
+lastsearch = 2024-07-12 14:16:19
 
 [www.youtube.com]
 match = -48.0%%
@@ -12,9 +12,9 @@ title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
 url = https://www.youtube.com/watch?v=0--4nk6XRjE
 
 [www.voatiengviet.com]
-match = -92.0%%
-title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
-url = https://www.voatiengviet.com/a/7026996.html
+match = -68.0%%
+title = Đài Loan bắt giữ 8 người Việt Nam là lao động bỏ trốn
+url = https://www.voatiengviet.com/a/dai-loan-bat-giu-8-nguoi-viet-nam-la-lao-dong-bo-tron/7677699.html
 
 [daithuy.com]
 match = -92.0%%
@@ -42,9 +42,9 @@ title = Doanh nhân Đài Loan bất ngờ qua đời khi muốn rút tài sản
 url = https://trithucvn.co/trung-quoc/doanh-nhan-dai-loan-bat-ngo-qua-doi-khi-muon-rut-tai-san-khoi-trung-quoc.html
 
 [books.google.com]
-match = -96.0%%
-title = Truyen ngan - Me luon dong hanh cung con - Google Books Result
-url = https://books.google.com/books?id=9fnxCwAAQBAJ&pg=PT340&lpg=PT340&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=heoH10zlpr&sig=ACfU3U01eTqgVx2Uk0HqpXWbG_B-7F58dw&hl=en&sa=X&ved=2ahUKEwid8uSOqZ-HAxUKFlkFHUNHADsQ6AF6BAgUEAM
+match = -68.0%%
+title = Tôn Giáo Học So Sánh - Page ii - Google Books Result
+url = https://books.google.com/books?id=FMfKEAAAQBAJ&pg=PR2-IA16&lpg=PR2-IA16&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=NSuZNi6nes&sig=ACfU3U180Ykd47xKbSmUtwVbbjBJ28HoYw&hl=en&sa=X&ved=2ahUKEwiVrLK_-qCHAxUnv4kEHUs8AawQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -80.0%%
