--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-12 10:22:26
+lastsearch = 2024-07-12 14:13:51
 
 [demxanh.com]
 match = -14.8%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
-match = -14.8%%
-title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
+match = -40.7%%
+title = Chiếu điều hòa mây {Loại 1 } đủ kích thước 90,1m,m2,m5 ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-Loại-1-đủ-kích-thước-90-1m-m2-m5-m6-m8-i.363378833.10726387786
 
 [goni.vn]
 match = 14.8%%
