--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-12 11:53:07
+lastsearch = 2024-07-12 14:21:17
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=t_SbqW_GD5E
 [books.google.com]
 match = -231.2%%
 title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
-url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash13gaQEY&sig=ACfU3U1DMaZXH1Tns4nTbWHeUmGOSX2U0w&hl=en&sa=X&ved=2ahUKEwipkJ7ZnZ-HAxWuMVkFHULpAwMQ6AF6BAgXEAM
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash13m9VLW&sig=ACfU3U1oFm_1F7khDh7vTEGVIz1VWC3bkw&hl=en&sa=X&ved=2ahUKEwjnpLrN-6CHAxV6j4kEHeldAoIQ6AF6BAgZEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
