--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-12 12:32:21
+lastsearch = 2024-07-12 14:15:16
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -95,4 +95,9 @@ url = https://zingnews.vn/tâm-ly-tin-tuc/trang552.html?type=2
 match = -53.6%%
 title = Trinh Hoi and the new wifey don't look half bad together
 url = https://vietchannel.wordpress.com/2010/03/06/trinh-hoi-and-the-new-wifey-dont-look-half-bad-together/
+
+[sieuthinguyenkim.com]
+match = -10.7%%
+title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
+url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
