--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-12 13:46:13
+lastsearch = 2024-07-12 14:19:19
 
 [bedding.vn]
 match = -123.1%%
@@ -12,14 +12,14 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
-match = -146.2%%
-title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
-url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
+match = -176.9%%
+title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
+url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [demhong.vn]
 match = -123.1%%
@@ -47,8 +47,8 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [demthienkim.com]
-match = -123.1%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC16
+match = -246.2%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [foreverbedding.net]
