--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-12 13:47:50
+lastsearch = 2024-07-12 14:18:58
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -12,8 +12,8 @@ title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
 url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -316.7%%
-title = Khao Sok River Rafting with Elephant Sanctuary and Lunch
-url = https://www.tuimusement.com/uk/thailand/krabi/khao-sok-river-rafting-with-elephant-sanctuary-and-lunch/e_w427n-d_2567-c_171/
+match = -366.7%%
+title = Book Tickets for Experiences and Activities Worldwide | TUI ...
+url = https://www.tuimusement.com/us/
 
 [www.dixondirectional.com]
 match = -166.7%%
