CI images update

--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-12 10:34:54
+lastsearch = 2024-07-12 14:31:12
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -37,9 +37,9 @@ title = Ruột gối Sông Hồng - Ruột đơn | Ruột ôm | Ruột vuông
 url = https://lombom.com/ruot-goi-song-hong/
 
 [thegioidemviet.vn]
-match = -48.0%%
-title = Ruột Gối Ôm Sông Hồng Chính Hãng 100%% - Giảm tới 15%%
-url = https://thegioidemviet.vn/ruot-goi-om-song-hong/
+match = -60.0%%
+title = Ruột Gối Sông Hồng Chính Hãng - Giảm tới 21%% [100%% ...
+url = https://thegioidemviet.vn/ruot-goi-song-hong/
 
 [cafef.vn]
 match = -88.0%%
@@ -90,4 +90,9 @@ url = https://dongahome.vn/bo-chan-ga-goi-hv71-hanvico
 match = 44.0%%
 title = Ruột gối cao su Everhome Oval Nano
 url = https://thegioidemcaosu.com/ruot-goi-cao-su-everhome-oval-nano/
+
+[uannga.vn]
+match = 19.0%%
+title = RUỘT CHĂN 5S MỎNG NHẸ
+url = https://uannga.vn/index.php/shops/ruot-chan/ruot-chan-5s-mong-nhe.html
 
