--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-12 13:24:01
+lastsearch = 2024-07-12 14:28:18
 
 [everon.com.vn]
-match = 3.8%%
-title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
+match = 14.8%%
+title = Bộ Chăn Ga Everon EPM 22063
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -42,9 +42,9 @@ title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
 url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [everonhanquoc.vn]
-match = 12.9%%
-title = Bộ chăn ga gối Everon EST-21039
-url = http://everonhanquoc.vn/everon/12750/bo-chan-ga-goi-everon-est-21039
+match = 19.4%%
+title = Bộ Chăn ga gối Everon EPM-21067
+url = http://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [yeshomebedding.com]
 match = 6.1%%
