--- a/images/bo-ga-chun-eve1-160x200/config.ini
+++ b/images/bo-ga-chun-eve1-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-eve1-160x200.html
 lastopen = 2024-06-07 00:50:34
 
 [search]
-lastsearch = 2024-07-12 10:52:48
+lastsearch = 2024-07-12 14:32:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,7 +37,12 @@ title = New Shoe Reccomendation for long Trad/Alpine days (Not ...
 url = https://www.mountainproject.com/forum/topic/122972146/new-shoe-reccomendation-for-long-tradalpine-days-not-finding-good-fit-with-tc-pr?page=2
 
 [www.youtube.com]
-match = -143.5%%
-title = Lattafa Ejaazi Intensive Silver - CLONE - La Nuit de L'Homme ...
-url = https://www.youtube.com/watch?v=dEY1AIHO8T0
+match = -100.0%%
+title = GRITTI GOSSIP NIGHT | BONBON POP | LV ON THE BEACH ...
+url = https://www.youtube.com/watch?v=BWDU_he2NKI
+
+[www.instagram.com]
+match = -139.1%%
+title = Unboxing @ortoparisi Orto Parisi - Bergamask If I do say so ...
+url = https://www.instagram.com/black.kaftan/reel/C43RS81N-7C/
 
