--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-12 03:46:51
+lastsearch = 2024-07-12 14:34:07
 
 [demxanh.com]
 match = 34.5%%
@@ -37,8 +37,8 @@ title = Chiếu điều hòa cao su non - Kho đệm
 url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.diepxuan.com]
-match = 65.5%%
-title = Điệp Xuân Chiếu điều hòa cao su 150x190
+match = 58.6%%
+title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
