--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-12 10:48:38
+lastsearch = 2024-07-12 14:28:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -505,4 +505,9 @@ url = https://websosanh.vn/s/chiếu+trúc+thái.htm
 match = -114.3%%
 title = Tiếp tục đưa ra các chính sách phù hợp cho phát triển ...
 url = https://stockbiz.vn/tin-tuc/tiep-tuc-dua-ra-cac-chinh-sach-phu-hop-cho-phat-trien-nang-luong-tai-tao/26795321
+
+[vietbao.com]
+match = -66.7%%
+title = Yêu Thương Làm Não Bộ Khỏe Mạnh Và Sống Thọ
+url = https://vietbao.com/a319517/yeu-thuong-lam-nao-bo-khoe-manh-va-song-tho
 
