--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-11 23:45:24
+lastsearch = 2024-07-12 14:29:12
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = 48.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mùng-chụp-bung-ngủ-người-lớn-gấp-gọn-tiện-dụng-1m6-1m8-2m2-cao-cấp-i.17452334.2227718270
 
 [munghoangphat.com]
 match = 48.0%%
