CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-12 12:49:07
+lastsearch = 2024-07-12 14:45:01
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -262,9 +262,9 @@ title =
 url = https://www.google.com/search?sca_esv=ec0ee542ba2d920f&q=What's+the+green+book+about?&sa=X&ved=2ahUKEwiSyuvVgJWHAxUAwBQJHX8KAh0QsZYEegQIFxAC
 
 [m.facebook.com]
-match = -271.4%%
-title = [ANIME EXPO 2024 Participation Celebration Special Gift] ...
-url = https://m.facebook.com/EN.BlueArchive/photos/anime-expo-2024-participation-celebration-special-giftthank-you-for-your-support/496900402856420/
+match = -250.0%%
+title = Blue Archive - [Rerun Pick-Up Recruitment Preview] A ...
+url = https://m.facebook.com/EN.BlueArchive/photos/rerun-pick-up-recruitment-previewa-rerun-pick-up-recruitment-will-begin-on-716-t/499332215946572/
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
