--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-12 12:13:09
+lastsearch = 2024-07-12 14:47:42
 
 [www.instagram.com]
-match = -238.5%%
-title = Ke Huy Quan (@kehuyquan) • Instagram photos and videos
-url = https://www.instagram.com/kehuyquan/?hl=en
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -276.9%%
