--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-12 11:50:55
+lastsearch = 2024-07-12 14:51:43
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -175.0%%
-title = MLBB | LẠC KEY VỀ VIỆT NAM, TỐP MỠ ĐỐI ĐẦU NGƯỜI ...
-url = https://www.youtube.com/watch?v=me0dvgGuCGs
+match = -218.8%%
+title = [2 HOUR] TAM BÔI LY BIỆT REMIX || CẦN VINH x LEE KEN x ...
+url = https://www.youtube.com/watch?v=Jt_x9hRoBlo
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -156.2%%
-title = Bộ đồ chơi xúc xắc lục lạc gặm nướu GoryeoBaby Hàn ...
-url = https://shopee.vn/Bộ-đồ-chơi-xúc-xắc-lục-lạc-gặm-nướu-GoryeoBaby-Hàn-Quốc-cho-bé-từ-0-24-tháng-i.239824437.4932236617
+match = -212.5%%
+title = Đồ chơi treo nôi cũi cho bé sơ sinh phát nhạc tự xoay, có ...
+url = https://shopee.vn/Đồ-chơi-treo-nôi-cũi-cho-bé-sơ-sinh-phát-nhạc-tự-xoay-có-đèn-chiếu-hình-lục-lạc-gặm-nướu-điều-khiển-từ-xa-đa-năng-i.256186540.22038728340
 
 [www.thegioididong.com]
 match = -193.8%%
