--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-12 13:39:56
+lastsearch = 2024-07-12 14:48:24
 
 [www.diepxuan.com]
 match = 10.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
 match = 70.0%%
@@ -22,9 +22,9 @@ title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
 url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
 
 [tiki.vn]
-match = -80.0%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+match = -45.0%%
+title = Chiếu nhựa gấp gọn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa gấp gọn
 
 [www.yellowpages.vn]
 match = 10.0%%
