--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-12 14:13:27
+lastsearch = 2024-07-12 14:44:39
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -25.0%%
+title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
+url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Thảm Welcome (40Cmx60Cm) - NH
 url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 
 [www.lottemart.vn]
-match = -45.8%%
-title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359
+match = -70.8%%
+title = Thảm Len Hình Thú 40x 60 cm (색상 랜덤배송)
+url = https://www.lottemart.vn/kr-ntg/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -25.0%%
-title = THẢM CHÙI CHÂN 3D SIÊU THẤM HÚT, ĐẸP MẮT, ...
-url = https://www.lazada.vn/products/tham-chui-chan-3d-sieu-tham-hut-dep-mat-chong-tron-truot-40x60-cm-005-i2049369315-s9566081756.html
+match = -41.7%%
+title = Thảm lau chân LÔNG LEN MỊN thấm hút tốt KHỔ 40*60cm ...
+url = https://www.lazada.vn/products/tham-lau-chan-long-len-min-tham-hut-tot-kho-4060cm-logo-hinh-ban-chan-i1740695503.html
 
 [megahomevietnam.com]
 match = 20.0%%
