CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-12 13:20:17
+lastsearch = 2024-07-12 15:18:44
 
 [www.facebook.com]
 match = -141.2%%
@@ -57,9 +57,9 @@ title = SUGAR is THE MAIN CULPRIT MAO NG DI KA MAGLOSE ug ...
 url = https://www.youtube.com/watch?v=HQhTun_xQxw
 
 [med.emory.edu]
-match = -164.7%%
-title = Mark Goodman, PhD - Profile | Emory School of Medicine
-url = https://med.emory.edu/departments/radiology/profile/?u=MGOODMA
+match = -129.4%%
+title = Ranliang Hu - Profile | Emory School of Medicine
+url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
 match = -8.3%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -188.2%%
+title = Immunological memory to SARS-CoV-2 assessed for up to ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7805444/
 
 [books.google.com]
 match = -7.7%%
