--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-12 14:27:44
+lastsearch = 2024-07-12 15:17:40
 
 [demxanh.com]
 match = 26.1%%
@@ -22,9 +22,9 @@ title = Điệp Xuân Chăn KQ không sóng 5kg
 url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
-match = 39.1%%
-title = Chăn măng lông KQ loại 7kg
-url = https://thegioidemonline.com/chan-bang-long-loai-7kg.html
+match = 33.3%%
+title = Chăn lông KQ mã 02
+url = https://thegioidemonline.com/chan-long-kq-ma-02.html
 
 [www.youtube.com]
 match = -87.0%%
