--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-12 14:47:42
+lastsearch = 2024-07-12 15:18:55
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -176.9%%
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -246.2%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off ...
+match = -338.5%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
