--- a/images/vo-goi-dreamland-50x70-tencel-luxury-sh/config.ini
+++ b/images/vo-goi-dreamland-50x70-tencel-luxury-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tencel-luxury-sh.html
 lastopen = 2024-06-07 01:44:50
 
 [search]
-lastsearch = 2024-07-12 14:44:50
+lastsearch = 2024-07-12 15:32:53
 
 [www.furlife.vn]
 match = 16.7%%
@@ -25,4 +25,34 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tencel-luxury-sh.html
 match = -61.5%%
 title = Lloyd newson headshot Strail uk ltd Cdu-365 cooktop ... - 品牌总网
 url = http://www.ppzw.com/dh/go.asp?url=http://xn--j1agbcagmi.xn--p1ai/592183411fe43z
+
+[www.lemon8-app.com]
+match = 0.0%%
+title = are these luxury bedsheets worth the hype???
+url = https://www.lemon8-app.com/eat.cook.eat/7381346487948788241?region=sg
+
+[www.instagram.com]
+match = -7.7%%
+title = Cheers and Merry Christmas 🎄🌟🥂♥️ Absolutely IN LOVE ...
+url = https://www.instagram.com/icadoo/p/CmmvyQWhsVC/
+
+[www.etsy.com]
+match = -6.5%%
+title = Reviews - ENDEADstudio - Page 3
+url = https://www.etsy.com/in-en/shop/ENDEADstudio/reviews?ref=pagination&page=3
+
+[www.facebook.com]
+match = -23.1%%
+title = As all the sanding is now done took a little bit of time ...
+url = https://www.facebook.com/photo.php?fbid=854411483399953&id=100064933264498&set=a.403594228481683&locale=gn_PY
+
+[www.rollitup.org]
+match = -34.8%%
+title = bodhi seeds | Page 1792
+url = https://www.rollitup.org/t/bodhi-seeds.518143/page-1792
+
+[scotchaddict.com]
+match = -10.0%%
+title = Barware Archives - Page 4 of 5
+url = https://scotchaddict.com/category/barware/page/4
 
