--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-12 13:45:26
+lastsearch = 2024-07-12 15:35:52
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = 33.3%%
+title = Rainman14
+url = https://www.youtube.com/@Rainman14
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = 12.5%%
-title = Ren Keyu
-url = https://en.wikipedia.org/wiki/Ren_Keyu
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [twitter.com]
 match = -430.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - itch.io
+title = 14 Days With You by cutiesai - Itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
