CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-12 13:35:09
+lastsearch = 2024-07-12 15:51:16
 
 [scholar.google.com]
 match = -43.8%%
@@ -362,9 +362,9 @@ title = Medi-Cal Cải Tổ Và Mở Rộng: Những Mục Tiêu Tương Lai
 url = https://vietbao.com/a319404/medi-cal-cai-to-va-mo-rong-nhung-muc-tieu-tuong-lai
 
 [vnexpress.net]
-match = -143.8%%
-title = Phim 18+ 'Cửu Long thành trại' ăn khách rạp Việt
-url = https://vnexpress.net/phim-18-cuu-long-thanh-trai-an-khach-rap-viet-4761880.html
+match = -18.8%%
+title = Thai nằm lạc trong đại tràng
+url = https://vnexpress.net/thai-nam-lac-trong-dai-trang-4768695.html
 
 [pandora.norbreeze.vn]
 match = -40.0%%
