--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-12 12:12:37
+lastsearch = 2024-07-12 15:45:05
 
 [www.instagram.com]
 match = -144.4%%
@@ -18,8 +18,8 @@ url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-c
 
 [www.facebook.com]
 match = -44.4%%
-title = Nệm Giá Kho Hồng Ngự - 16 Nguyễn Huệ
-url = https://www.facebook.com/nemgiakhohongngu/
+title = NEM Furniture JSC | Ho Chi Minh City
+url = https://www.facebook.com/NEM.Furniture.Interior.Design/
 
 [thegioinem.com]
 match = -111.1%%
