--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-12 14:27:11
+lastsearch = 2024-07-12 15:52:48
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -82,9 +82,9 @@ title = XEBEC Brush™ Wheel Type
 url = https://aulac-global.com.vn/san-pham/xebec-brush-wheel-type/
 
 [www.instagram.com]
-match = -206.7%%
-title = Linh Doan (@linhdzoan) • Instagram photos and videos
-url = https://www.instagram.com/linhdzoan/
+match = -93.3%%
+title = Vu Hoang My (@vuhoangmyofficial)
+url = https://www.instagram.com/vuhoangmyofficial/?hl=en
 
 [www.ministop.vn]
 match = -26.7%%
