--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-12 15:52:26
+lastsearch = 2024-07-12 16:15:00
 
 [shopee.vn]
-match = 48.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mùng-chụp-bung-ngủ-người-lớn-gấp-gọn-tiện-dụng-1m6-1m8-2m2-cao-cấp-i.17452334.2227718270
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
 match = 48.0%%
