--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-12 05:50:33
+lastsearch = 2024-07-12 16:15:38
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -100.0%%
-title = Danh sách đại lý đệm bông ép Everhome uy tín trên toàn ...
-url = https://demxanh.com/danh-sach-dai-ly-dem-bong-ep-everhome-uy-tin-tren-toan-quoc.html
+match = -19.0%%
+title = Đệm bông ép chính hãng giảm 50 ...
+url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
 match = -128.6%%
@@ -37,8 +37,8 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = -14.3%%
-title = Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
