CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-12 15:44:31
+lastsearch = 2024-07-12 16:33:09
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -440,4 +440,9 @@ url = https://www.gcpsk12.org/
 match = -230.8%%
 title = Kono Bijutsubu ni wa Mondai ga Aru! - Vol. 16 Ch. 115
 url = https://forums.mangadex.org/threads/kono-bijutsubu-ni-wa-mondai-ga-aru-vol-16-ch-115.1807744/
+
+[www.ada.org]
+match = -100.0%%
+title = American Dental Association: Home
+url = https://www.ada.org/
 
