--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-12 13:35:42
+lastsearch = 2024-07-12 16:36:05
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -13.0%%
@@ -462,9 +462,9 @@ title = South Korean Crypto Exchanges Set to Review Over ...
 url = https://cryptonews.com/news/south-korean-exchanges-set-to-review-over-1300-tokens.htm
 
 [synapse.koreamed.org]
-match = -233.3%%
-title = Review
-url = https://synapse.koreamed.org/articles/1084195
+match = -25.0%%
+title = Original Article
+url = https://synapse.koreamed.org/articles/1119644
 
 [www.cambridge.org]
 match = -121.7%%
