--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-12 13:17:01
+lastsearch = 2024-07-12 16:32:36
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = 3.2%%
+title = Đệm bông ép Dreamland bông Nano chống khuẩn
+url = https://demxanh.com/dem-bong-ep-dreamland-bong-nano-chong-khuan.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -37,9 +37,9 @@ title = Đệm lò xo cao cấp Hanvico Hera - 2024
 url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 
 [vuanem.com]
-match = -35.5%%
-title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
+match = -48.4%%
+title = Top 8 cửa hàng bán chăn ga gối nệm Quận 2 giá tốt, chất ...
+url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-2.html
 
 [uannga.vn]
 match = 6.5%%
