--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-12 11:52:55
+lastsearch = 2024-07-12 16:35:54
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = 5.9%%
+title = Matthew 20:22-28 NKJV
+url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -155,4 +155,9 @@ url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-ron
 match = -158.8%%
 title = Cách sử dụng màn chụp tự bung 2 cửa đỉnh vuông cao cấp ...
 url = https://www.facebook.com/demxanhcom/videos/cách-sử-dụng-màn-chụp-tự-bung-2-cửa-đỉnh-vuông-cao-cấp/718813088661095/
+
+[wol.jw.org]
+match = -64.7%%
+title = Matyu 22 — Wastaua INTENET LAIBRERI
+url = https://wol.jw.org/tpi/wol/b/r75/lp-mp/bi7/40/22
 
