--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-12 15:33:05
+lastsearch = 2024-07-12 16:30:32
 
 [www.lazada.vn]
-match = -27.8%%
-title = Nệm Cao Su Mỏng Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/nem-cao-su-mong/
+match = -94.4%%
+title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -100.0%%
@@ -155,4 +155,9 @@ url = https://rapido.vn/4-cach-lam-nem-ran-truyen-thong-gion-ngon-don-gian-tai-n
 match = -38.9%%
 title = Cổng thông tin điện tử Quốc Hội
 url = https://quochoi.vn/
+
+[mmbonappetit.com]
+match = -172.2%%
+title = Nem rán / Chả giò • Vietnamese Fried Rolls - MM Bon Appétit
+url = https://mmbonappetit.com/nem-ran/
 
