--- a/images/ruot-nem-warmdream-140x190x09/config.ini
+++ b/images/ruot-nem-warmdream-140x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-140x190x09.html
 lastopen = 2024-06-11 23:28:51
 
 [search]
-lastsearch = 2024-07-12 14:51:22
+lastsearch = 2024-07-12 16:31:32
 
 [www.diepxuan.com]
-match = 51.7%%
-title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
+match = 3.4%%
+title = Ruột nệm Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/ruot-nem-warmdream-140x190x09.html
 
 [gearspace.com]
 match = -8.7%%
