--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-12 14:44:39
+lastsearch = 2024-07-12 16:28:45
 
 [shopee.vn]
-match = -25.0%%
-title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
-url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -41.7%%
-title = Thảm lau chân LÔNG LEN MỊN thấm hút tốt KHỔ 40*60cm ...
-url = https://www.lazada.vn/products/tham-lau-chan-long-len-min-tham-hut-tot-kho-4060cm-logo-hinh-ban-chan-i1740695503.html
+match = -25.0%%
+title = THẢM CHÙI CHÂN 3D SIÊU THẤM HÚT, ĐẸP MẮT, ...
+url = https://www.lazada.vn/products/tham-chui-chan-3d-sieu-tham-hut-dep-mat-chong-tron-truot-40x60-cm-005-i2049369315-s9566081756.html
 
 [megahomevietnam.com]
 match = 20.0%%
