--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-12 16:15:13
+lastsearch = 2024-07-12 16:36:56
 
 [xoptraisan.info]
 match = 5.3%%
@@ -27,9 +27,9 @@ title = Thảm xốp hoạt hình 60x60
 url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
 
 [shopee.vn]
-match = -94.7%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -131.6%%
+title = XỐP NỈ TRẢI SÀN CAO CẤP( giá rẻ nhất thị trường) kt;60*60
+url = https://shopee.vn/XỐP-NỈ-TRẢI-SÀN-CAO-CẤP(-giá-rẻ-nhất-thị-trường)-kt-60*60-i.38266178.1653543000
 
 [thamtretho.com]
 match = 37.5%%
