CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-12 13:38:59
+lastsearch = 2024-07-12 16:45:06
 
 [www.diepxuan.com]
-match = -62.5%%
-title = Điệp Xuân Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
+match = -20.8%%
+title = Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 
 [changagoidemsonghong.com]
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22005
-url = https://www.everonvn.vn/chi-tiet/everon-esm22005.html
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22010
+url = https://www.everonvn.vn/chi-tiet/everon-esm22010.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
