--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-12 14:16:55
+lastsearch = 2024-07-12 16:48:44
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Chiếu cây HT 160x200
 url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -150,4 +150,9 @@ url = https://www.nemsaithanh.com/san-pham/chieu-truc-135.html
 match = -80.0%%
 title = Đèn LED Spotlight Âm Trần 8091 14W
 url = https://dangquanglighting.com/den-led-spotlight-am-tran-8091-14w/
+
+[httlvn.org]
+match = -180.0%%
+title = Thơ: ÍCH LỢI CỦA NGHỊCH CẢNH - Hội Thánh Tin Lành ...
+url = https://httlvn.org/tho-ich-loi-cua-nghich-canh.html
 
