--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-12 16:49:49
+lastsearch = 2024-07-12 17:39:33
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
+match = -33.3%%
+title = Bộ ga chun Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
 match = -85.7%%
@@ -42,8 +42,8 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Chăn ga gối xoa nhung
+match = -66.7%%
+title = Chăn ga gối xoa nhung - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chan-ga-goi-xoa-nhung.html
 
 [everon365.vn]
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -47.6%%
-title = ga gối cotton xoa nhung đám cưới hồng mvdv16
-url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
+match = -104.8%%
+title = Bộ ga gối trần bông phi lụa 3 món ga chun ga trải giường ...
+url = https://shopee.vn/Bộ-ga-gối-trần-bông-phi-lụa-3-món-ga-chun-ga-trải-giường-cao-cấp-bô-1-mầu-nhiều-kích-thước-kèm-2-vỏ-gối-i.59917031.8026211533
 
 [runa.vn]
 match = -4.8%%
