--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-12 14:14:34
+lastsearch = 2024-07-12 17:33:02
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -82,9 +82,9 @@ title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VIS
 url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -9.5%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
