--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-12 16:46:36
+lastsearch = 2024-07-12 17:34:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -345,4 +345,9 @@ url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
 match = -100.0%%
 title = Cờ vua
 url = http://thtanthanh.phubinh.edu.vn/chuyen-mon/co-vua.html
+
+[concung.com]
+match = -220.0%%
+title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
+url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
