--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-12 14:44:30
+lastsearch = 2024-07-12 17:34:12
 
 [www.gov.uk]
 match = -200.0%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/app8789085
+url = https://www.bernzomatic.com/appwwcBy/53637.csv
 
 [www.imdb.com]
 match = -86.7%%
@@ -835,4 +835,9 @@ url = https://www.nhs.uk/contraception/methods-of-contraception/condoms/
 match = 7.1%%
 title = Boston 25 News
 url = https://www.boston25news.com/homepage
+
+[publicaccess.courts.state.mn.us]
+match = -166.7%%
+title = Minnesota Court Records Online (MCRO): Home Page
+url = https://publicaccess.courts.state.mn.us/
 
