CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-12 16:31:07
+lastsearch = 2024-07-12 17:52:33
 
 [everon.online]
 match = 19.2%%
@@ -32,9 +32,9 @@ title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
 url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.tiktok.com]
-match = -200.0%%
-title = Thuyovet
-url = https://www.tiktok.com/discover/thuyovet
+match = 19.2%%
+title = Gcam Para Samsung A12 2024
+url = https://www.tiktok.com/discover/gcam-para-samsung-a12-2024
 
 [books.google.com]
 match = -103.8%%
@@ -265,4 +265,9 @@ url = https://baomoi.com/hoat-dong-truyen-ba-kinh-dien-phat-giao-o-dang-trong-th
 match = 24.0%%
 title = Mỹ An mừng Đảng, đón Xuân
 url = https://nguhanhson.danang.gov.vn/chi-tiet-tin-tuc?dinhdanh=8813003&cat=1602
+
+[finance.vietstock.vn]
+match = 0.0%%
+title = QCG: CTCP Quốc Cường Gia Lai - QCGL
+url = https://finance.vietstock.vn/QCG-ctcp-quoc-cuong-gia-lai.htm
 
