--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-07-12 11:46:30
+lastsearch = 2024-07-12 17:45:33
 
 [demxanh.com]
 match = 0.0%%
@@ -83,11 +83,16 @@ url = https://www.instagram.com/greatestescape_bali/reel/C7l4aPdSj3X/?locale=es_
 
 [www.tles.tyc.edu.tw]
 match = -17.4%%
-title = دعاء لتيسير الزواج المتعسر [N9LPOH]
-url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80aeypbmhdn0h.xn--p1ai/XivoJbh6feypr
+title = 797 регион это откуда [vespjE]
+url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80adyaqv.xn--p1ai/5813267pam4r3v53xy275comafe88y
 
 [www.crazytravelista.com]
 match = -121.7%%
 title = Cute Places to Stay in Bali with Amazing Views for Under ...
 url = https://www.crazytravelista.com/cute-places-to-stay-in-bali/
+
+[y1ty6kkc.com]
+match = -169.6%%
+title = thomas jefferson school - 纽约华人资讯网News educations days
+url = http://y1ty6kkc.com/index3.php?name=https://xn--80apbkdj.xn--p1ai/84956327vpukxyzsbsv4fe36a
 
