--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-12 14:48:46
+lastsearch = 2024-07-12 17:46:59
 
 [chieutruc.info]
 match = -63.6%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
 url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
-match = -36.4%%
-title = Chiếu cói nga sơn hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu cói nga sơn
+match = -27.3%%
+title = Chiếu cói tatami hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu cói tatami
 
 [m.facebook.com]
 match = 13.6%%
@@ -37,9 +37,9 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 45.5%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
 match = -109.1%%
