--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-12 17:15:44
+lastsearch = 2024-07-12 17:47:55
 
 [shopee.vn]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-ki
 [books.google.com]
 match = -231.2%%
 title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
-url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szdmUVVs&sig=ACfU3U3fkw4d7A3nP62ie9AT7EIueDbFcw&hl=en&sa=X&ved=2ahUKEwjjxszMoqGHAxVfyMkDHR6QCgMQ6AF6BAgfEAM
+url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szdnMUYs&sig=ACfU3U3t8NukcCPEi2AX4iXLn1i5fswqZQ&hl=en&sa=X&ved=2ahUKEwiL7bjlqaGHAxXzG9AFHX8NAvQQ6AF6BAggEAM
 
 [baovinhlong.vn]
 match = -137.5%%
