CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-12 17:48:59
+lastsearch = 2024-07-12 18:11:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -212.5%%
-title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
-url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
+match = -200.0%%
+title = Không Đủ Nhẫn Tâm Remix - Khánh Phương x Bibo | Tình ...
+url = https://www.youtube.com/watch?v=KJhcK9x2Rcg
 
 [hawater.com.vn]
 match = -75.0%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -50.0%%
-title = UPDATE NGAY NHỮNG QUÁN PHỞ XÀO
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1456837801646618/
+match = -162.5%%
+title = KTX ĐHQG TP.HCM | 🔥🔥Cơm Thu Vân- #25k - CƠM DẺO ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2385239168523215/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -342,9 +342,9 @@ title = Bạn Cùng Phòng Là Tử Thần! - Chương 16: Vô chiếu lạc âm
 url = https://truyenfull.vn/ban-cung-phong-la-tu-than/chuong-16/
 
 [baobinhthuan.com.vn]
-match = -143.8%%
-title = Giải võ cổ truyền vô địch các lứa tuổi trẻ tỉnh
-url = https://baobinhthuan.com.vn/giai-vo-co-truyen-vo-dich-cac-lua-tuoi-tre-tinh-120075.html
+match = -181.2%%
+title = Gia đình hạnh phúc là nền tảng của quốc gia thịnh vượng
+url = https://baobinhthuan.com.vn/gia-dinh-hanh-phuc-la-nen-tang-cua-quoc-gia-thinh-vuong-120307.html
 
 [baoyenbai.com.vn]
 match = -93.8%%
@@ -440,4 +440,19 @@ url = https://wildrift.leagueoflegends.com/vi-vn/news/game-updates/wild-rift-pat
 match = -6.2%%
 title = THCS Nguyễn An Khương
 url = https://thcsnguyenankhuong.hcm.edu.vn/
+
+[petrovietnam.petrotimes.vn]
+match = -193.8%%
+title = Lý Sơn – Những trải nghiệm khó quên tại hòn đảo Yên Bình
+url = https://petrovietnam.petrotimes.vn/ly-son-nhung-trai-nghiem-kho-quen-tai-hon-dao-yen-binh-714172.html
+
+[nhandan.vn]
+match = 0.0%%
+title = Những mầm cây đợi nắng
+url = https://nhandan.vn/nhung-mam-cay-doi-nang-post818743.html
+
+[vietstock.vn]
+match = -137.5%%
+title = MBS tung gói ưu đãi "khủng" cho nhà đầu tư trẻ
+url = https://vietstock.vn/2024/07/mbs-tung-goi-uu-dai-khung-cho-nha-dau-tu-tre-830-1206774.htm
 
