--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-12 16:45:28
+lastsearch = 2024-07-12 18:10:52
 
 [everon.com.vn]
 match = 11.1%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22070
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = 38.2%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24061 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24061.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
