--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-12 15:18:44
+lastsearch = 2024-07-12 18:17:42
 
 [www.facebook.com]
 match = -141.2%%
@@ -97,8 +97,8 @@ title = XU Huaqiang
 url = http://english.simm.cas.cn/en_sourcedb_simm/Supervisor/Pharmacology/202311/t20231102_538278.html
 
 [www.duke-nus.edu.sg]
-match = 0.0%%
-title = Tan Ah Moy - Singapore
+match = -105.9%%
+title = Duke-NUS Medical School Directory Tan Ah Moy
 url = https://www.duke-nus.edu.sg/directory/detail/Tan-Ah-Moy
 
 [www.clinicalnutritionjournal.com]
