--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-12 17:18:16
+lastsearch = 2024-07-12 19:25:31
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -132,7 +132,7 @@ title =
 url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
 
 [www.skyscanner.net]
-match = -20.0%%
-title = Book TUI Flights to Singapore
-url = https://www.skyscanner.net/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
+match = -53.3%%
+title = Book TUI Flights to Singapore Changi
+url = https://www.skyscanner.net/flights/airline-flights-to-airport/sin/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore-changi
 
