--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-12 12:52:15
+lastsearch = 2024-07-12 19:31:08
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -50.0%%
-title = Chiếu cao su non Coco bo chun màu xanh dương
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html
+match = -45.5%%
+title = Chiếu cao su non Coco bo chun màu xanh mint
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
 
 [www.tiktok.com]
 match = -127.3%%
