--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-12 17:47:55
+lastsearch = 2024-07-12 19:31:49
 
 [shopee.vn]
 match = 25.0%%
@@ -98,8 +98,8 @@ url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-ki
 
 [books.google.com]
 match = -231.2%%
-title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
-url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szdnMUYs&sig=ACfU3U3t8NukcCPEi2AX4iXLn1i5fswqZQ&hl=en&sa=X&ved=2ahUKEwiL7bjlqaGHAxXzG9AFHX8NAvQQ6AF6BAggEAM
+title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
+url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPPd_dc22&sig=ACfU3U0miElACIBBwTQScf0PfpkObh1hQQ&hl=en&sa=X&ved=2ahUKEwji1oaCwaGHAxXHI0QIHcSdBcUQ6AF6BAggEAM
 
 [baovinhlong.vn]
 match = -137.5%%
