--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-12 13:51:13
+lastsearch = 2024-07-12 19:24:18
 
 [www.lazada.vn]
 match = -88.9%%
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -27.8%%
-title = Chicco Presto Vs Cybex Coya
-url = https://www.tiktok.com/discover/Chicco-presto-vs-cybex-coya
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
 match = -150.0%%
