--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-12 16:48:55
+lastsearch = 2024-07-12 19:26:28
 
 [shopee.vn]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -41.7%%
-title = Thảm lau chân LÔNG LEN MỊN thấm hút tốt KHỔ 40*60cm ...
-url = https://www.lazada.vn/products/tham-lau-chan-long-len-min-tham-hut-tot-kho-4060cm-logo-hinh-ban-chan-i1740695503.html
+match = -37.5%%
+title = thảm welcome 40x60 Thảm chùi chân nhựa Welcome
+url = https://www.lazada.vn/products/tham-welcome-40x60-tham-chui-chan-nhua-welcome-i160063126.html
 
 [megahomevietnam.com]
 match = 20.0%%
