--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-12 17:21:13
+lastsearch = 2024-07-12 19:29:29
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -21.1%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [som.cuanschutz.edu]
 match = -121.1%%
