CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-12 17:38:06
+lastsearch = 2024-07-12 20:19:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
-url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -625,4 +625,9 @@ url = https://community.rachio.com/t/flex-daily-schedule-set-to-run-in-am-even-t
 match = -6.2%%
 title = UBND Tỉnh Thanh Hóa
 url = https://thanhhoa.gov.vn/
+
+[congan.hanam.gov.vn]
+match = -200.0%%
+title = Lực lượng ANTT ở cơ sở xã Vũ Bản, huyện Bình Lục (Hà ...
+url = https://congan.hanam.gov.vn/index.php/vi/news/tin-hoat-dong/luc-luong-antt-o-co-so-xa-vu-ban-huyen-binh-luc-ha-nam-giup-chau-be-di-lac-tro-ve-gia-dinh-2622.html
 
