--- a/images/nem-dreamland-uc-160x190x09/config.ini
+++ b/images/nem-dreamland-uc-160x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x190x09.html
 lastopen = 2024-06-07 01:34:59
 
 [search]
-lastsearch = 2024-07-12 17:32:51
+lastsearch = 2024-07-12 20:19:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -40,4 +40,9 @@ url = https://www.linkedin.com/posts/andreavaleriofallin_healthcare-industry-cel
 match = -66.7%%
 title = Making major in a GT V12 9mm? - Tanfoglio (EAA / IFG)
 url = https://forums.brianenos.com/topic/221659-making-major-in-a-gt-v12-9mm/
+
+[news.lugnet.com]
+match = 22.2%%
+title = My Own Creations : 4621 (-10)
+url = https://news.lugnet.com/announce/moc/?n=4621,-10&v=a
 
