--- a/images/ruot-nem-warmdream-180x200x09/config.ini
+++ b/images/ruot-nem-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x09.html
 lastopen = 2024-06-08 11:30:15
 
 [search]
-lastsearch = 2024-07-12 20:04:41
+lastsearch = 2024-07-12 20:24:05
 
 [www.diepxuan.com]
 match = 3.4%%
@@ -45,4 +45,9 @@ url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1052622&VT=T
 match = -62.1%%
 title = The "Dream Suppressant" Limited Edition A hero VS glove
 url = https://m.youtube.com/watch?v=dBfZl-fVl74
+
+[www.amazon.com]
+match = -17.2%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/asin/B003Y55V3O/ref=ask_mdp_dpmw_ql_hza?isAnswered=true
 
