--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-12 17:38:48
+lastsearch = 2024-07-12 20:17:19
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -175.0%%
-title = MLBB | LẠC KEY VỀ VIỆT NAM, TỐP MỠ ĐỐI ĐẦU NGƯỜI ...
-url = https://www.youtube.com/watch?v=me0dvgGuCGs
+match = -218.8%%
+title = [2 HOUR] TAM BÔI LY BIỆT REMIX || CẦN VINH x LEE KEN x ...
+url = https://www.youtube.com/watch?v=Jt_x9hRoBlo
 
 [saigontourist.edu.vn]
 match = -162.5%%
