--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-12 15:45:27
+lastsearch = 2024-07-12 20:19:45
 
 [www.tui.co.uk]
-match = -80.0%%
-title = Marella Discovery 2 Itineraries
-url = https://www.tui.co.uk/cruise/ships/marella-discovery-2/itineraries
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = -126.7%%
@@ -200,4 +200,9 @@ url = https://in.trip.com/flights/airline-by/thomson-airways-limited-flight-to-s
 match = -86.7%%
 title = TUI launches direct flight to Singapore
 url = https://www.sellingtravel.co.uk/tui-launches-direct-flight-to-singapore/
+
+[www.birminghamairport.co.uk]
+match = 0.0%%
+title = 
+url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
 
