CI images update

--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-12 16:47:18
+lastsearch = 2024-07-12 20:37:16
 
 [shopee.vn]
-match = 60.0%%
-title = chiếu điều hoà tặng kèm gối manny
-url = https://shopee.vn/chiếu-điều-hoà-tặng-kèm-gối-manny-i.43102896.17874439616
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [meoi.com.vn]
 match = 24.0%%
