--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-12 20:22:41
+lastsearch = 2024-07-12 20:29:58
 
 [vinatools.com]
 match = -206.7%%
@@ -200,4 +200,9 @@ url = https://austronggroup.com.vn/lam-chan-nang/
 match = -173.3%%
 title = Lacie D2 Professional 16TB Storage - MacBook Pro
 url = https://ipv4.macbookpro.vn/Lacie-D2-Professional-16TB.aspx
+
+[xoilaczvv.tv]
+match = -206.7%%
+title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
+url = https://xoilaczvv.tv/
 
