--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-12 19:23:57
+lastsearch = 2024-07-12 20:33:14
 
 [shopee.vn]
-match = -58.3%%
-title = Chiếu điều hòa mây {Loại 1 } đủ kích thước 90,1m,m2,m5 ...
-url = https://shopee.vn/Chiếu-điều-hòa-mây-Loại-1-đủ-kích-thước-90-1m-m2-m5-m6-m8-i.363378833.10726387786
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
