--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-12 20:05:25
+lastsearch = 2024-07-12 20:31:54
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlovDp67AV&sig=ACfU3U1HKEvHX_sC9iveRE3yQX4KhCyj0w&hl=en&sa=X&ved=2ahUKEwiV7pLDyKGHAxXqFmIAHe6ZC80Q6AF6BAgVEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlepQEmj9&sig=ACfU3U2IkdKqZnQe6gVWUOuP7feQ0Gl6YQ&hl=en&sa=X&ved=2ahUKEwjliem4zqGHAxVUJTQIHWKpDzEQ6AF6BAgbEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
