--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-12 17:37:54
+lastsearch = 2024-07-12 20:33:35
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Nem Lai Vung, from a rustic dish to a heritage
 url = https://www.vietnam.vn/en/nem-lai-vung-tu-mon-an-dan-da-tro-thanh-di-san/
 
 [wattclarity.com.au]
-match = -142.9%%
-title = Balancing Supply and Demand …. in the fast approaching ' ...
-url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
+match = -76.2%%
+title = Expect the unexpected - It's the NEM after all
+url = https://wattclarity.com.au/articles/2022/02/expect-the-unexpected-its-the-nem-after-all/
 
 [books.google.com]
 match = -142.9%%
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -71.4%%
-title = Extreme - More Than Words (Official Music Video)
-url = https://www.youtube.com/watch?v=UrIiLvg58SY
+match = -81.0%%
+title = The Weeknd - Can't Feel My Face (Official Video)
+url = https://www.youtube.com/watch?v=KEI4qSrkPAs
 
 [www.epa.gov]
 match = -19.0%%
