--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-07-12 13:37:38
+lastsearch = 2024-07-12 20:33:58
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -42,8 +42,8 @@ title = Nệm Everon
 url = https://www.diepxuan.com/everon/nem-everon.html
 
 [everon.online]
-match = -60.0%%
-title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép, Áo ...
+match = -90.0%%
+title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép Everon, Áo ...
 url = https://everon.online/blogs/news/bang-gia-ban-vo-boc-dem-bong-ep-everon
 
 [nemgiakho.com]
