--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-12 20:00:45
+lastsearch = 2024-07-12 20:32:30
 
 [www.linkedin.com]
 match = -172.7%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -63.6%%
-title = Ultra Running Calendar
-url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
+match = -136.4%%
+title = Review: Speedland GS:TAM Trail Shoe
+url = https://ultrarunning.com/features/reviews/review-speedland-gstam-trail-shoe/
 
 [www.quora.com]
 match = -145.5%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -145.5%%
-title = 2024 Mt. Tam Trail Run | Mill Valley
-url = https://www.runguides.com/event/4688/mt-tam-trail-run
+match = -309.1%%
+title = San Francisco Bay Area Running Race Calendar - 2024
+url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
 match = -125.0%%
@@ -177,8 +177,8 @@ title = Tấm Trải Trang Trí Giường - Thanh Thúy Hạnh
 url = https://www.thanhthuyhanh.com/products/tam-trai-trang-tri-giuong
 
 [drgloriapetruzzelli.com]
-match = -236.4%%
-title = Race Results – Dr. Gloria Petruzzelli, Psy.D.
+match = -300.0%%
+title = Race Results - Dr. Gloria Petruzzelli, Psy.D., PMH-C
 url = https://drgloriapetruzzelli.com/race-results-2/
 
 [tamtravel.com.vn]
@@ -340,4 +340,9 @@ url = https://www.tiktok.com/@fathertam
 match = 0.0%%
 title = Tam Trail Time Trial
 url = https://www.movemint.cc/events/tam_trail_time_trial_2024
+
+[www.sos.ks.gov]
+match = -9.1%%
+title = Kansas Register
+url = https://www.sos.ks.gov/publications/Register/Volume-41/PDF/Vol-41-No-34-August-25-2022-July-2022-Forfeitures.pdf
 
