CI images update

--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-12 20:30:30
+lastsearch = 2024-07-12 20:44:30
 
 [demxanh.com]
 match = -42.9%%
@@ -200,4 +200,19 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
 url = https://diepxuan.com/
+
+[www.tripadvisor.com]
+match = -50.0%%
+title = CARVEL, Naugatuck - Restaurant Reviews & Phone Number
+url = https://www.tripadvisor.com/Restaurant_Review-g33846-d4854854-Reviews-Carvel-Naugatuck_Connecticut.html
+
+[www.yelp.com]
+match = 14.3%%
+title = Carvel Ice Cream Orange, CT 06477
+url = https://www.yelp.com/search?find_desc=Carvel+Ice+Cream&find_loc=Orange,+CT+06477
+
+[forums.arcade-museum.com]
+match = -50.0%%
+title = Galaga Cocktail - $475 obo -mine (Gainesville, GA)
+url = https://forums.arcade-museum.com/threads/galaga-cocktail-475-obo-mine-gainesville-ga.41445/
 
