--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-12 17:14:21
+lastsearch = 2024-07-12 20:52:58
 
 [hoa18.com]
 match = -84.2%%
@@ -22,9 +22,9 @@ title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
 url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = 22.2%%
-title = Hồi Sinh Ngọc Rồng
-url = https://www.facebook.com/hoisinhngocrong/
+match = -142.1%%
+title = Mậu Đông (tỉnh Yên Bái) thì một hòn đá bất ngờ bị ném ...
+url = https://www.facebook.com/tintucvtv24/photos/vào-khoảng-23h55-ngày-107-khi-tàu-hàng-số-hiệu-h2705-chạy-đến-đoạn-giữa-ga-mậu-a/802875725381634/
 
 [vietnambiz.vn]
 match = -147.4%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -84.2%%
-title = cây phú quý giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=cây phú quý
+match = -126.3%%
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
