--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-12 15:32:18
+lastsearch = 2024-07-12 20:46:47
 
 [shopee.vn]
 match = -13.8%%
@@ -27,14 +27,14 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = -24.1%%
-title = BIÊN HÒA & TÂN HẠNH & HOÁ AN & BỬU LONG & CHỢ ...
-url = https://www.facebook.com/groups/546821726692502/posts/nội-thấtsđt-0969006272-/1244526540255347/
+match = 26.3%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 24.1%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
