--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-12 20:37:46
+lastsearch = 2024-07-12 20:50:47
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 
 [sieuthidemonline.vn]
-match = -24.0%%
-title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
-url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
+match = -84.0%%
+title = Tuấn Anh - công ty sản xuất chăn ga gối đệm hàng đầu Việt ...
+url = https://sieuthidemonline.vn/thuong-hieu/tuan-anh/
 
 [suongtuyet.com]
 match = 16.0%%
@@ -67,9 +67,9 @@ title = ️PHỤ KIỆN IDOL❤️ | LOMO CARD xinh thế này ...
 url = https://www.instagram.com/moji.idol/p/CzYvrbGvwS9/
 
 [www.facebook.com]
-match = 0.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
-url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
 [demviethome.vn]
 match = -36.0%%
@@ -90,4 +90,9 @@ url = https://www.tiktok.com/@ngdangdung/video/7285373555020139778
 match = -36.0%%
 title = Đệm bông ép Tuấn Anh chính hãng, giá tốt nhất
 url = https://thegioidemonline.com/dem-bong-ep-tuan-anh.html
+
+[dem24h.vn]
+match = 12.0%%
+title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
+url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 
