--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-12 17:38:39
+lastsearch = 2024-07-12 21:11:18
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -325.0%%
-title = TUI Travel upbeat ahead of merger after forecast-beating ...
-url = https://www.reuters.com/article/world/tui-travel-upbeat-ahead-of-merger-after-forecast-beating-2014-idUSKCN0JI0YN/
+match = -316.7%%
+title = TUI Travel sees strong 2014 as customers spend more on ...
+url = https://www.reuters.com/article/world/tui-travel-sees-strong-2014-as-customers-spend-more-on-foreign-holidays-idUSBRE9B90FS/
 
 [www.mybaggage.com]
 match = -116.7%%
