--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-12 17:50:47
+lastsearch = 2024-07-12 21:12:12
 
 [chieutruc.info]
 match = -73.9%%
@@ -32,9 +32,9 @@ title = Chiếu Tre Cao Bằng - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-cao-bang
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 39.1%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [thegioidemonline.com]
 match = 43.5%%
@@ -47,9 +47,9 @@ title = Chiếu trúc cao bằng ở tại Hà Tĩnh
 url = https://hanggiadunghatinh.com/?x=76/san-pham/chieu-truc-cao-bang
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [chieu.com.vn]
 match = 52.6%%
