--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-12 09:00:30
+lastsearch = 2024-07-12 21:11:29
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -22,8 +22,8 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2021-2022-app-data-by-school-q6.xls
 
 [medboard.nv.gov]
-match = -90.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -110.0%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.uclahealth.org]
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.0%%
-title = Steve Braunstein, MD, PhD
-url = https://profiles.ucsf.edu/steve.braunstein
+match = -6.2%%
+title = Steven Deeks, MD
+url = https://profiles.ucsf.edu/steven.deeks
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
+title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
 
 [www.west-cs.com]
 match = -100.0%%
@@ -335,4 +335,9 @@ url = https://www.sechistorical.org/collection/papers/1970/1971_0310_SECInstitut
 match = 0.0%%
 title = Admiral Boulevard
 url = https://mostateparks.com/sites/mostateparks/files/Parks-Blvds-AL Survey.pdf
+
+[faculty.uci.edu]
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
