CI images update

--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-12 19:26:28
+lastsearch = 2024-07-12 21:37:08
 
 [shopee.vn]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -37.5%%
-title = thảm welcome 40x60 Thảm chùi chân nhựa Welcome
-url = https://www.lazada.vn/products/tham-welcome-40x60-tham-chui-chan-nhua-welcome-i160063126.html
+match = -75.0%%
+title = Thảm lau chân, thảm lau bàn chân siêu len mịn thấm hút ...
+url = https://www.lazada.vn/products/tham-lau-chan-tham-lau-ban-chan-sieu-len-min-tham-hut-va-mem-mai-size-40x60-i2386245794.html
 
 [megahomevietnam.com]
 match = 20.0%%
