--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-12 20:46:03
+lastsearch = 2024-07-12 21:36:57
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,14 +27,14 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -77.3%%
-title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
+match = 9.1%%
+title = Bộ Ga Gối Màu Trơn Giá Tốt T03/2024
+url = https://www.lazada.vn/tag/bo-ga-goi-mau-tron/?page=2
 
 [www.instagram.com]
-match = 4.5%%
-title = 𝔹𝕦̀𝕟𝕘 𝕟𝕠̂̉ 𝕤𝕚𝕖̂𝕦 𝕡𝕙𝕒̂̉𝕞 ℂ𝕙𝕒𝕟𝕖 ℂ𝕠𝕔𝕠 𝟚𝟘𝟚𝟛 🔝V
-url = https://www.instagram.com/chomchomchangagoi/p/Crd1DC4pqMk/
+match = -100.0%%
+title = 𝗖𝗛𝗔𝗥𝗟𝗢𝗡𝗘 𝗔𝗡𝗗 𝗖𝗢𝗖𝗢 𝗙𝗨𝗧𝗨𝗥𝗘. HM01. 💚 Mã Phi lụa 1 màu ...
+url = https://www.instagram.com/p/C7hH3TevMho/
 
 [h5.lazada.vn]
 match = -40.9%%
