--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-12 20:35:37
+lastsearch = 2024-07-12 21:36:24
 
 [shopee.vn]
-match = -14.8%%
-title = Chiếu điều hòa (không kèm vỏ gối) sợi mây 2 lớp chất ...
-url = https://shopee.vn/Chiếu-điều-hòa-(không-kèm-vỏ-gối)-sợi-mây-2-lớp-chất-lượng-cao-Minh-Nhật-–-Sang-trọng-mềm-mại-thoáng-mát-i.319365577.9030851250
+match = -18.5%%
+title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
+url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
 
 [demxanh.com]
 match = 14.8%%
