--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-12 20:37:25
+lastsearch = 2024-07-12 21:37:42
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -94.1%%
+title = ISAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
