--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-12 20:53:09
+lastsearch = 2024-07-12 21:37:53
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -61.1%%
-title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
-url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
+match = -11.1%%
+title = Nem Nướng | Ho Chi Minh City
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
 match = 23.5%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ 9F 14
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 
 [m.facebook.com]
-match = -144.4%%
-title = Ăn vặt Vị Thanh - Hậu Giang | Nem nướng lụi sieu ngon
-url = https://m.facebook.com/groups/831435913920996/posts/2049638048767437/
+match = -50.0%%
+title = Ăn Ngon Bà rịa | ❤NEM NƯỚNG NHA TRANG❤️
+url = https://m.facebook.com/groups/2222988021289951/posts/3638882973033775/
 
 [emartmall.com.vn]
 match = 0.0%%
