--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-12 19:28:57
+lastsearch = 2024-07-12 21:36:36
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+match = 4.3%%
+title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -87,9 +87,9 @@ title = Russian Offensive Campaign Assessment, April 26, 2024
 url = https://understandingwar.org/backgrounder/russian-offensive-campaign-assessment-april-26-2024
 
 [www.youtube.com]
-match = -104.3%%
-title = Season 2021 Opening Day | Full Livestream - League of ...
-url = https://www.youtube.com/watch?v=rnFRcjzhTzE
+match = -134.8%%
+title = Vladimir Putin - Putin, Putout (The Unofficial Russian Anthem ...
+url = https://www.youtube.com/watch?v=t-wFKNy0MZQ
 
 [www.ft.com]
 match = -8.7%%
